fixed padding and margins in style.css for all sections. removed breaks in index.html

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ div.text-center{
 #header, #nav, #footer{
     background: #ebebeb;
     padding: 35px;
+    margin: 15px;
     clear: both;
 }
 
@@ -21,5 +22,10 @@ div.text-center{
     background: #ebebeb;
     float: left;
     width: 495px;
-    margin: 10px;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px; 
+    padding-top: 15px;
+    padding-bottom: 225px;
 }
